<resources>
    <string name="app_name">SQRL Login</string>
    <string name="introduction_startpage"><b>Secure Quick Reliable Login</b>\n\nWelcome to the help pages. These pages try to explain the different concepts in the protocol in more detail. We will also try to explain the different use cases available to you using this application.\n\nTo use the help pages you can swipe left or right in order to change page.\n\nIf you are interested in looking at the source code of this application, it\'s open source and available at <a href="https://github.com/kalaspuffar/secure-quick-reliable-login">https://github.com/kalaspuffar/secure-quick-reliable-login</a></string>
    <string name="introduction_nutshell"><b>In a Nutshell</b>\n\nBefore you begin using SQRL to log in to websites, your SQRL private identity must be created. You only need one, probably for life, because it reveals NOTHING about you, and it\'s highly secure. It\'s just a very long (77-digit) random number.\n\nFrom then on, whenever you log in with SQRL to a website, your private identity is used to generate another 77-digit number for that one website. Every website you visit sees you as a different number, yet every time you return to the same site, that site\'s unique number is regenerated.\n\nThis allows you to be uniquely and permanently identified, yet completely anonymous.\n\nSince you never need to use an email address or a password, you never give a website your actual identity to protect. If the website\'s SQRL identities are ever stolen, not only would the stolen identities only be valid for that one website, but SQRL\'s cryptography prevents impersonation by using stolen identities.\n\nThis is as good as it sounds. It\'s what we\'ve been waiting for.</string>
    <string name="introduction_password"><b>Your SQRL Password</b>\n\nSQRL frees you from the burden of logging into Internet websites by doing it for you. But this means if someone else gained control of your SQRL app, they could impersonate you.\n\nWe solve this problem with an SQRL password which YOU use to login to your SQRL. You decide how much login protection you need. You choose your own password of whatever length and complexity you desire. To impede someone guessing, you set how long any password takes to process. And to make longer, more complex passwords less painful to use, the password\'s first four characters may be used to refresh the full password you recently entered\n\nYou are free to change your password and its various settings at any time. And if you should ever forget or lose your password for any reason, SQRL\'s Rescue Code can be used to recover your access.</string>
    <string name="introduction_rescue_code"><b>SQRL\'s Rescue Code</b>\n\nYou and SQRL will probably never need rescuing. But SQRL\'s security is so tight that you MIGHT need a way to unlock things a bit. Here are the two scenarios where you WOULD need rescuing:\n\n• If you changed your password and the new one slipped your mind, there\'s no one to ask. Unlike websites, where you click I forgot my password, your SQRL app doesn\'t know it either. If it did, it could be hacked and used to steal your identity. Backups you have made of your identity will have been saved under the password you were using then, so that might help. But your SQRL-assigned Rescue Code will always forgive any memory lapse.\n• Once you have established your SQRL identity with a website, that identity can ONLY be changed with ITS Rescue Code. If someone WERE to somehow steal your SQRL identity (if your phone was stolen and you used a VERY weak or guessable password, or malware infected your device), they could never replace your identity with theirs. But YOU could retake your stolen identity by creating a new one and using the old identity\'s Rescue Code (which the bad guys would never have) to replace that old identity with your new one.\n\nSQRL\'s Rescue Code is a powerful ally. Write it down, keep it safe and never lose it. You will probably never need it, but if you do you\'ll be very glad you kept it.</string>
    <string name="introduction_backup"><b>Why Backup?</b>\n\nYour SQRL private identity is a randomly chosen 77-digit number used to generate each of your individual web identities. NO ONE knows what it is. As you use SQRL to identify yourself to the Internet, your identity BECOMES that 77-digit number. If it is ever lost, so is your Internet identity.\n\nThe other reason to backup your private identity is to copy it to another computer or mobile device. Once your one private SQRL identity has been installed into all of your devices, you can use any of them to easily identify yourself on the Internet.\n\nSQRL provides many simple ways to back up your private identity, and all backups are ALWAYS protected by your SQRL password and Rescue Code.\n\nPrinting backups onto paper, as a small QR code and text (perhaps more than once) is recommended since paper is the original data storage medium. In many ways, it\'s still the best. Simply store it where you store your life\'s other important documents. You can also record your backup to thumb drives, burn them to CD\'s, and store them safely anywhere.\n\nBut PLEASE do make backups, since NO ONE knows your unique 77-digit private identity… not even you!</string>
    <string name="welcome_message"><b>Welcome to the Secure Quick Reliable Login (SQRL) client.</b>\n\nThis client app will help you securely and effortlessly log in to websites supporting the SQRL protocol. \n\nIt safely stores and lets you manage your SQRL identity, which the app uses to create unique per-site logins, which are anonymous and give the website owner no secrets to keep.\n\nThere is no connection to any personal information. It just verifies that the same phone that authenticated last time is the same even this time. This makes it possible to create a unique anonymous login on your favorite sites, and you decide how much data you share with the site.\n\nJust to be clear, this application will not hide any identifiers that your phone may provide, but it will not provide any extra data.\n\nYou start the process by creating an identity or scanning an identity generated by another compatible client (like the desktop client supplied by <a href="https://grc.com">https://grc.com</a>) and open it with your password. When your key is loaded you\'re then able to authenticate by scanning QR codes supplied by websites, verifying the address and choosing to log in.\n\nPlease note that permission to use the camera needs to be supplied in order to scan exported secrets, create identities or scan site QR Codes.\n\nTo follow this project on GitHub you can visit\n<a href="https://github.com/kalaspuffar/secure-quick-reliable-login">https://github.com/kalaspuffar/secure-quick-reliable-login</a></string>
    <string name="button_scan_secret">Scan identity QR code</string>
    <string name="button_login">Login</string>
    <string name="button_intro_close">Close</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="about_message_title">About</string>
    <string name="about_message_text"><b>Secure Quick Reliable Login</b>\n\nVersion: %s\n\nGithub repository:\n<a href="https://github.com/kalaspuffar/secure-quick-reliable-login">https://github.com/kalaspuffar/secure-quick-reliable-login</a>\n\nAuthors:\nDaniel Persson</string>
    <string name="decrypt_identity_message">You\'ve successfully scanned your secure identity. Please verify that the rescue data presented below corresponds to the data printed on your key page.</string>
    <string name="communication_incorrect_response">Incorrect response, the server didn\'t respond with an error code. Try again later.</string>
    <string name="communication_bad_id_association">Bad ID Association: SQRL identity which may be associated with the query nut does not match the SQRL ID used to submit the query.</string>
    <string name="communication_client_failure">Client failure: Some information in the query didn\'t make sense to the server so it won\'t handle this request.</string>
    <string name="communication_command_failed">Command failed: The web server has encountered a problem successfully processing the query. </string>
    <string name="communication_function_not_supported">Function(s) not supported: Requested one or more SQRL functions, that the server does not currently support.</string>
    <string name="communication_sqrl_disabled">SQRL authentication for this identity has previously been disabled. To use this identity it needs to be enabled using rescue code.</string>
    <string name="communication_transient_error">Transient error: The server indicates that the signature(s) are correct, but something about the query prevented the command from completing.</string>
    <string name="title_activity_main">Main</string>
    <string name="button_import_identity">Import identity</string>
    <string name="button_settings">Settings</string>
    <string name="button_create_identity">Create new</string>
    <string name="button_remove_identity">Remove</string>
    <string name="button_rename_identity">Rename</string>
    <string name="button_export_identity">Export</string>
    <string name="button_reset_password">Reset password</string>
    <string name="button_rekey_identity">Rekey</string>
    <string name="button_change_password">Change password</string>
    <string name="identity_rename_title">Rename identity</string>
    <string name="title_activity_show_identity">Show identity</string>
    <string name="button_rename_ok">Rename</string>
    <string name="current_identity_title">Current identity</string>
    <string name="title_activity_clear_identity">Clear QuickPass</string>
    <string name="settings_hint_length">QuickPass length (characters)</string>
    <string name="settings_password_verify">Password verify (seconds)</string>
    <string name="settings_idle_timeout">QuickPass timeout (minutes)</string>
    <string name="settings_sqrl_only">Request SQRL only login</string>
    <string name="settings_no_sqrl_bypass">Request no SQRL bypass</string>
    <string name="settings_save">Save</string>
    <string name="settings_cancel">Cancel</string>
    <string name="button_export_show_identity">Show identity</string>
    <string name="button_export_save_identity">Save identity</string>
    <string name="button_print_identity">Print identity</string>
    <string name="introduction_startpage_title">Start</string>
    <string name="introduction_nutshell_title">Nutshell</string>
    <string name="introduction_password_title">Password</string>
    <string name="introduction_rescue_code_title">Rescue Code</string>
    <string name="introduction_backup_title">Backup</string>
    <string name="export_without_password">Without password</string>
    <string name="action_language">Language</string>
    <string name="password_strength_poor">Password strength: poor</string>
    <string name="password_lowercase">Lowercase</string>
    <string name="password_uppercase">Uppercase</string>
    <string name="password_symbols">Symbols</string>
    <string name="password_digits">Digits</string>
    <string name="img_password_contains_lowercase">Indicates whether the password contains lowercase letters</string>
    <string name="img_password_contains_uppercase">Indicates whether the password contains uppercase letters</string>
    <string name="img_password_contains_digits">Indicates whether the password contains digits</string>
    <string name="img_password_contains_symbols">Indicates whether the password contains symbols</string>
    <string name="short_password_warning">You are using a very short password. This is highly insecure and should absolutely be avoided!</string>
    <string name="identity_management">Identity management</string>
    <string name="action_password_options">Password options</string>
</resources>