<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.ea.sqrl.activites.identity.IdentityManagementActivity">
    <item
        android:id="@+id/action_idm_pw_change_password"
        android:orderInCategory="90"
        android:title="@string/button_change_password"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_idm_pw_reset_password"
        android:orderInCategory="90"
        android:title="@string/button_reset_password"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_idm_pw_rekey"
        android:orderInCategory="90"
        android:title="@string/button_rekey_identity"
        app:showAsAction="never" />

</menu>
