<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/introductionActivityView"
    tools:context="org.ea.sqrl.activites.IntroductionActivity">

    <android.support.design.widget.TabLayout
        android:id="@+id/tab_dots"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        app:layout_constraintTop_toTopOf="parent"
        app:tabGravity="center"
        app:tabMode="scrollable">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/introduction_startpage_title" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/introduction_nutshell_title" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/introduction_password_title" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/introduction_rescue_code_title" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/introduction_backup_title" />
    </android.support.design.widget.TabLayout>


    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="325dp"
        android:layout_marginBottom="8dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toTopOf="@+id/btnCloseIntroduction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_dots" />

    <Button
        android:id="@+id/btnCloseIntroduction"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_intro_close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
