<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true">

    <TextView
        android:id="@+id/txtPasswordWarning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/password_strength_medium"
        android:padding="5dp"
        android:text="@string/short_password_warning"
        android:visibility="gone"
        android:textColor="@color/password_strength_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressPasswordStrength"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:max="9"
        app:layout_constraintBottom_toTopOf="@+id/txtPasswordStrength"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordWarning" />

    <TextView
        android:id="@+id/txtPasswordStrength"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/password_strength_poor"
        android:padding="5dp"
        android:text="@string/password_strength_poor"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/password_strength_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressPasswordStrength" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/characterClassLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:flexWrap="wrap"
        app:alignItems="baseline"
        app:alignContent="flex_start"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordStrength">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="0dp"
            android:paddingRight="8dp"
            android:paddingStart="0dp"
            android:paddingEnd="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgPasswordContainsLowercase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/img_password_contains_lowercase"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/led_red" />

            <TextView
                android:id="@+id/txtLowercase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:text="@string/password_lowercase"
                android:textSize="10sp"
                app:layout_constraintStart_toEndOf="@+id/imgPasswordContainsLowercase"
                app:layout_constraintTop_toTopOf="@+id/imgPasswordContainsLowercase"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="0dp"
            android:paddingRight="8dp"
            android:paddingStart="0dp"
            android:paddingEnd="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgPasswordContainsUppercase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/img_password_contains_uppercase"
                app:layout_constraintStart_toEndOf="@+id/txtLowercase"
                app:layout_constraintTop_toTopOf="@+id/imgPasswordContainsLowercase"
                app:srcCompat="@drawable/led_red" />

            <TextView
                android:id="@+id/txtUppercase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:text="@string/password_uppercase"
                android:textSize="10sp"
                app:layout_constraintStart_toEndOf="@+id/imgPasswordContainsUppercase"
                app:layout_constraintTop_toTopOf="@+id/imgPasswordContainsLowercase"
                tools:ignore="SmallSp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="0dp"
            android:paddingRight="8dp"
            android:paddingStart="0dp"
            android:paddingEnd="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgPasswordContainsDigits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/img_password_contains_digits"
                app:layout_constraintStart_toEndOf="@+id/txtUppercase"
                app:layout_constraintTop_toTopOf="@+id/imgPasswordContainsLowercase"
                app:srcCompat="@drawable/led_red" />

            <TextView
                android:id="@+id/txtDigits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:text="@string/password_digits"
                android:textSize="10sp"
                app:layout_constraintStart_toEndOf="@+id/imgPasswordContainsDigits"
                app:layout_constraintTop_toTopOf="@+id/imgPasswordContainsLowercase"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="0dp"
            android:paddingRight="8dp"
            android:paddingStart="0dp"
            android:paddingEnd="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgSymbols"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/img_password_contains_symbols"
                app:layout_constraintStart_toEndOf="@+id/txtDigits"
                app:layout_constraintTop_toTopOf="@+id/imgPasswordContainsLowercase"
                app:srcCompat="@drawable/led_red" />

            <TextView
                android:id="@+id/txtSymbols"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:text="@string/password_symbols"
                android:textSize="10sp"
                app:layout_constraintStart_toEndOf="@+id/imgSymbols"
                app:layout_constraintTop_toTopOf="@+id/imgPasswordContainsLowercase"
                tools:ignore="SmallSp"/>

        </LinearLayout>

    </com.google.android.flexbox.FlexboxLayout>

</androidx.constraintlayout.widget.ConstraintLayout>